# symmetric_cnn_pip

./: .gitmodules  README.md  setup.cfg
