[metadata]
name = symmetric_cnn
version = 0.0.1
author = Nicolas Micaux
author_email = author@example.com
description = Implementation of reflection symmetry in convolutional layers. -- Pip wrapper for https://github.com/treder/CNN-Symmetry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicolasMICAUX/symmetric_cnn_pip
project_urls =
    Bug Tracker = https://github.com/treder/CNN-Symmetry/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src